Deployed and squashed more bugs

--- a/ember/app/styles/app.scss
+++ b/ember/app/styles/app.scss
@@ -69,6 +69,10 @@ body{
     overflow: hidden;
     background: #DDD;
     padding: 3px;
+    code{
+      background: transparent;
+      border: none;
+    }
   }
 }
 .alignleft{
@@ -152,6 +156,9 @@ nav{
 
 // =========================================================== Blog Posts ============================================================
 
+.posts-excerpt{
+  line-height: 1.9rem;
+}
 .posts{
   border-bottom: 1px solid #ddd;
   padding: 0px 0 25px 0;
